// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`call contract revert (contract error) 1`] = `
"Missing or invalid parameters.
Double check you have provided the correct parameters.

Raw Call Arguments:
  from:  0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
  to:    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2
  data:  0xa0712d6800000000000000000000000000000000000000000000000000000000000001a4

Details: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73
Version: viem@2.13.6"
`;

exports[`call contract revert (insufficient params) 1`] = `
"Missing or invalid parameters.
Double check you have provided the correct parameters.

Raw Call Arguments:
  from:  0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
  to:    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2
  data:  0xa0712d68

Details: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73
Version: viem@2.13.6"
`;

exports[`call duplicate address 1`] = `
"State for account "0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2" is set multiple times.

Raw Call Arguments:
  to:    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2
  data:  0x06fdde03
  State Override:
    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2:
      stateDiff:
        0x00000000000000000000000000000000000000000000000000000000000001a4: 0x00000000000000000000000000000000000000000000000000000000000001a4
    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2:
      stateDiff:
        0x00000000000000000000000000000000000000000000000000000000000001a4: 0x00000000000000000000000000000000000000000000000000000000000001a4

Version: viem@2.13.6"
`;

exports[`call fee cap too high 1`] = `"0x000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000084e6f745761676d69000000000000000000000000000000000000000000000000"`;

exports[`call fee cap too high 2`] = `[CallExecutionError: The fee cap (\`maxFeePerGas\` = 115792089237316195423570985008687907853269984665640564039457584007913.129639936 gwei) cannot be higher than the maximum allowed value (2^256-1).

Raw Call Arguments:
  from:          0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
  to:            0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2
  data:          0xa0712d6800000000000000000000000000000000000000000000000000000000000001a4
  maxFeePerGas:  115792089237316195423570985008687907853269984665640564039457584007913.129639936 gwei

Version: viem@2.13.6]`;

exports[`call gas fee is less than block base fee 1`] = `
{
  "data": undefined,
}
`;

exports[`call gas fee is less than block base fee 2`] = `
{
  "data": undefined,
}
`;

exports[`call gas too high 1`] = `
{
  "data": undefined,
}
`;

exports[`call gas too low 1`] = `[CallExecutionError: Missing or invalid parameters.
Double check you have provided the correct parameters.

Raw Call Arguments:
  from:  0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
  to:    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2
  data:  0xa0712d6800000000000000000000000000000000000000000000000000000000000001a4
  gas:   100

Details: revert

Docs: https://tevm.sh/reference/tevm/errors/classes/reverterror/
Details: {"error":"revert","errorType":"EvmError"}
Version: 1.1.0.next-73
Version: viem@2.13.6]`;

exports[`call gas too low 2`] = `[Function]`;

exports[`call maxFeePerGas less than maxPriorityFeePerGas 1`] = `
"The provided tip (\`maxPriorityFeePerGas\` = 22 gwei) cannot be higher than the fee cap (\`maxFeePerGas\` = 20 gwei).

Raw Call Arguments:
  from:                  0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266
  to:                    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2
  data:                  0xa0712d6800000000000000000000000000000000000000000000000000000000000001a4
  maxFeePerGas:          20 gwei
  maxPriorityFeePerGas:  22 gwei

Version: viem@2.13.6"
`;

exports[`call pass state and stateDiff 1`] = `
"state and stateDiff are set on the same account.

Raw Call Arguments:
  to:    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2
  data:  0x06fdde03
  State Override:
    0xFBA3912Ca04dd458c843e2EE08967fC04f3579c2:
      state:
        0x00000000000000000000000000000000000000000000000000000000000001a4: 0x00000000000000000000000000000000000000000000000000000000000001a4
      stateDiff:
        0x00000000000000000000000000000000000000000000000000000000000001a4: 0x00000000000000000000000000000000000000000000000000000000000001a4

Version: viem@2.13.6"
`;
